tests/scripts/errors/parse/missing_colon_ternary.cdo
VAR x = TRUE ? 1 2;
print(x);
